added hiera variable managemnt. And hiera value endpoint to retrieve with vars replaced. Does not work for hashes/arrays yet.
